// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`RadioGroup styled components StyledInput : StyledInput has correct styles 1`] = `
Object {
  "margin": 0,
  "opacity": 0,
  "overflow": "hidden",
  "padding": 0,
  "width": 0,
}
`;

exports[`RadioGroup styled components StyledLabel : has correct styles when  1`] = `
Object {
  "color": "$theme.colors.foreground",
  "fontFamily": "$theme.typography.font400.fontFamily",
  "fontSize": "$theme.typography.font400.fontSize",
  "fontWeight": "$theme.typography.font400.fontWeight",
  "lineHeight": "$theme.typography.font400.lineHeight",
  "padding": "$theme.sizing.scale200",
  "verticalAlign": "middle",
}
`;

exports[`RadioGroup styled components StyledLabel : has correct styles when $isError 1`] = `
Object {
  "color": "$theme.colors.foreground",
  "fontFamily": "$theme.typography.font400.fontFamily",
  "fontSize": "$theme.typography.font400.fontSize",
  "fontWeight": "$theme.typography.font400.fontWeight",
  "lineHeight": "$theme.typography.font400.lineHeight",
  "padding": "$theme.sizing.scale200",
  "verticalAlign": "middle",
}
`;

exports[`RadioGroup styled components StyledLabel : has correct styles when disabled 1`] = `
Object {
  "color": "$theme.colors.foreground",
  "fontFamily": "$theme.typography.font400.fontFamily",
  "fontSize": "$theme.typography.font400.fontSize",
  "fontWeight": "$theme.typography.font400.fontWeight",
  "lineHeight": "$theme.typography.font400.lineHeight",
  "padding": "$theme.sizing.scale200",
  "verticalAlign": "middle",
}
`;

exports[`RadioGroup styled components StyledLabel Label: StyledLabel has correct styles when set to bottom 1`] = `
Object {
  "color": "$theme.colors.foreground",
  "fontFamily": "$theme.typography.font400.fontFamily",
  "fontSize": "$theme.typography.font400.fontSize",
  "fontWeight": "$theme.typography.font400.fontWeight",
  "lineHeight": "$theme.typography.font400.lineHeight",
  "paddingBottom": "$theme.sizing.scale200",
  "verticalAlign": "middle",
}
`;

exports[`RadioGroup styled components StyledLabel Label: StyledLabel has correct styles when set to left 1`] = `
Object {
  "color": "$theme.colors.foreground",
  "fontFamily": "$theme.typography.font400.fontFamily",
  "fontSize": "$theme.typography.font400.fontSize",
  "fontWeight": "$theme.typography.font400.fontWeight",
  "lineHeight": "$theme.typography.font400.lineHeight",
  "paddingLeft": "$theme.sizing.scale200",
  "verticalAlign": "middle",
}
`;

exports[`RadioGroup styled components StyledLabel Label: StyledLabel has correct styles when set to right 1`] = `
Object {
  "color": "$theme.colors.foreground",
  "fontFamily": "$theme.typography.font400.fontFamily",
  "fontSize": "$theme.typography.font400.fontSize",
  "fontWeight": "$theme.typography.font400.fontWeight",
  "lineHeight": "$theme.typography.font400.lineHeight",
  "paddingRight": "$theme.sizing.scale200",
  "verticalAlign": "middle",
}
`;

exports[`RadioGroup styled components StyledLabel Label: StyledLabel has correct styles when set to top 1`] = `
Object {
  "color": "$theme.colors.foreground",
  "fontFamily": "$theme.typography.font400.fontFamily",
  "fontSize": "$theme.typography.font400.fontSize",
  "fontWeight": "$theme.typography.font400.fontWeight",
  "lineHeight": "$theme.typography.font400.lineHeight",
  "paddingTop": "$theme.sizing.scale200",
  "verticalAlign": "middle",
}
`;

exports[`RadioGroup styled components StyledRadioGroupRoot RadioGroupRoot: StyledRadioGroupRoot has correct styles when set to horizontal 1`] = `
Object {
  "alignItems": "center",
  "cursor": "pointer",
  "display": "flex",
  "flexDirection": "row",
}
`;

exports[`RadioGroup styled components StyledRadioGroupRoot RadioGroupRoot: StyledRadioGroupRoot has correct styles when set to vertical 1`] = `
Object {
  "alignItems": "flex-start",
  "cursor": "pointer",
  "display": "flex",
  "flexDirection": "column",
}
`;

exports[`RadioGroup styled components StyledRadioMarkInner : has correct styles when  1`] = `
Object {
  ":active": Object {
    "backgroundColor": "$theme.colors.mono400",
  },
  ":hover": Object {
    "backgroundColor": "$theme.colors.mono400",
  },
  "backgroundColor": "white",
  "borderRadius": "50%",
  "height": "$theme.sizing.scale600",
  "transitionDuration": "$theme.animation.timing100",
  "transitionTimingFunction": "$theme.animation.easeOutCurve",
  "width": "$theme.sizing.scale600",
}
`;

exports[`RadioGroup styled components StyledRadioMarkInner : has correct styles when $isError 1`] = `
Object {
  ":active": Object {
    "backgroundColor": null,
  },
  ":hover": Object {
    "backgroundColor": null,
  },
  "backgroundColor": "white",
  "borderRadius": "50%",
  "height": "$theme.sizing.scale600",
  "transitionDuration": "$theme.animation.timing100",
  "transitionTimingFunction": "$theme.animation.easeOutCurve",
  "width": "$theme.sizing.scale600",
}
`;

exports[`RadioGroup styled components StyledRadioMarkInner : has correct styles when $isFocused 1`] = `
Object {
  ":active": Object {
    "backgroundColor": "$theme.colors.mono500",
  },
  ":hover": Object {
    "backgroundColor": "$theme.colors.mono500",
  },
  "backgroundColor": "white",
  "borderRadius": "50%",
  "height": "$theme.sizing.scale600",
  "transitionDuration": "$theme.animation.timing100",
  "transitionTimingFunction": "$theme.animation.easeOutCurve",
  "width": "$theme.sizing.scale600",
}
`;

exports[`RadioGroup styled components StyledRadioMarkInner : has correct styles when checked 1`] = `
Object {
  ":active": Object {
    "backgroundColor": "$theme.colors.mono400",
  },
  ":hover": Object {
    "backgroundColor": "$theme.colors.mono400",
  },
  "backgroundColor": "white",
  "borderRadius": "50%",
  "height": "$theme.sizing.scale600",
  "transitionDuration": "$theme.animation.timing100",
  "transitionTimingFunction": "$theme.animation.easeOutCurve",
  "width": "$theme.sizing.scale600",
}
`;

exports[`RadioGroup styled components StyledRadioMarkInner : has correct styles when disabled 1`] = `
Object {
  ":active": Object {
    "backgroundColor": "$theme.colors.mono400",
  },
  ":hover": Object {
    "backgroundColor": "$theme.colors.mono400",
  },
  "backgroundColor": "white",
  "borderRadius": "50%",
  "height": "$theme.sizing.scale600",
  "transitionDuration": "$theme.animation.timing100",
  "transitionTimingFunction": "$theme.animation.easeOutCurve",
  "width": "$theme.sizing.scale600",
}
`;

exports[`RadioGroup styled components StyledRadioMarkOuter : StyledRadioMarkOuter has correct styles 1`] = `
Object {
  "alignItems": "center",
  "backgroundColor": "$theme.colors.mono700",
  "borderRadius": "50%",
  "display": "flex",
  "height": "$theme.sizing.scale700",
  "justifyContent": "center",
  "marginBottom": "$theme.sizing.scale200",
  "marginLeft": "$theme.sizing.scale200",
  "marginRight": "$theme.sizing.scale200",
  "marginTop": "$theme.sizing.scale200",
  "verticalAlign": "middle",
  "width": "$theme.sizing.scale700",
}
`;

exports[`RadioGroup styled components StyledRoot : StyledRoot has correct styles 1`] = `
Object {
  "alignItems": "center",
  "cursor": "pointer",
  "display": "flex",
  "flexDirection": "row",
}
`;

exports[`RadioGroup styled components StyledRoot : has correct styles when label is placedbottom 1`] = `
Object {
  "alignItems": "center",
  "cursor": "pointer",
  "display": "flex",
  "flexDirection": "column",
}
`;

exports[`RadioGroup styled components StyledRoot : has correct styles when label is placedleft 1`] = `
Object {
  "alignItems": "center",
  "cursor": "pointer",
  "display": "flex",
  "flexDirection": "row",
}
`;

exports[`RadioGroup styled components StyledRoot : has correct styles when label is placedright 1`] = `
Object {
  "alignItems": "center",
  "cursor": "pointer",
  "display": "flex",
  "flexDirection": "row",
}
`;

exports[`RadioGroup styled components StyledRoot : has correct styles when label is placedtop 1`] = `
Object {
  "alignItems": "center",
  "cursor": "pointer",
  "display": "flex",
  "flexDirection": "column",
}
`;
